--- a/SearchFittingsInParkingSpaces/SearchFittingsInParkingSpaces.csproj
+++ b/SearchFittingsInParkingSpaces/SearchFittingsInParkingSpaces.csproj
@@ -53,23 +53,26 @@
 
     <ItemGroup>
         <!-- Revit References -->
-        <PackageReference Include="Nice3point.Revit.Build.Tasks" Version="3.0.1"/>
-        <PackageReference Include="Nice3point.Revit.Toolkit" Version="$(RevitVersion).*"/>
-        <PackageReference Include="Nice3point.Revit.Extensions" Version="$(RevitVersion).*"/>
-        <PackageReference Include="Nice3point.Revit.Api.RevitAPI" Version="$(RevitVersion).*"/>
-        <PackageReference Include="Nice3point.Revit.Api.RevitAPIUI" Version="$(RevitVersion).*"/>
+        <PackageReference Include="Nice3point.Revit.Build.Tasks" Version="3.0.1" />
+        <PackageReference Include="Nice3point.Revit.Toolkit" Version="$(RevitVersion).*" />
+        <PackageReference Include="Nice3point.Revit.Extensions" Version="$(RevitVersion).*" />
+        <PackageReference Include="Nice3point.Revit.Api.RevitAPI" Version="$(RevitVersion).*" />
+        <PackageReference Include="Nice3point.Revit.Api.RevitAPIUI" Version="$(RevitVersion).*" />
 
         <!-- MVVM -->
-        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0"/>
-    </ItemGroup>
-    
-    <ItemGroup>
-        <Resource Include="Resources\Icons\RibbonIcon16.png"/>
-        <Resource Include="Resources\Icons\RibbonIcon32.png"/>
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Models"/>
+        <Folder Include="Models" />
+        <Folder Include="obj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Resources\Icons\RibbonIcon16.png" />
+      <Resource Include="Resources\Icons\RibbonIcon16.png" />
+      <None Remove="Resources\Icons\RibbonIcon32.png" />
+      <Resource Include="Resources\Icons\RibbonIcon32.png" />
     </ItemGroup>
 
 </Project>
