Завершение работы над окном плагина. Следующий шаг, разработка логики вычисления нужной арматуры.

--- a/SearchFittingsInParkingSpaces/SearchFittingsInParkingSpaces.csproj
+++ b/SearchFittingsInParkingSpaces/SearchFittingsInParkingSpaces.csproj
@@ -41,7 +41,7 @@
     <PropertyGroup>
         <StartAction>Program</StartAction>
         <StartProgram>C:\Program Files\Autodesk\Revit $(RevitVersion)\Revit.exe</StartProgram>
-        <StartArguments>/language RUS</StartArguments>
+        <StartArguments>/language ENG</StartArguments>
     </PropertyGroup>
 
     <!-- Build configuration -->
