--- a/SearchFittingsInParkingSpaces/SearchFittingsInParkingSpaces.csproj
+++ b/SearchFittingsInParkingSpaces/SearchFittingsInParkingSpaces.csproj
@@ -53,6 +53,7 @@
 
     <ItemGroup>
         <!-- Revit References -->
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Nice3point.Revit.Build.Tasks" Version="3.0.1" />
         <PackageReference Include="Nice3point.Revit.Toolkit" Version="$(RevitVersion).*" />
         <PackageReference Include="Nice3point.Revit.Extensions" Version="$(RevitVersion).*" />
@@ -72,6 +73,12 @@
       <Resource Include="Resources\Icons\RibbonIcon16.png" />
       <None Remove="Resources\Icons\RibbonIcon32.png" />
       <Resource Include="Resources\Icons\RibbonIcon32.png" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Update="familyCategories.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
